# VIcenzo

./: README.md  dockerfile  vincenzo.excalidraw
crates/vcz/: Cargo.toml
crates/vcz/src/: main.rs
crates/vcz_daemon/: Cargo.toml
crates/vcz_ui/: Cargo.toml
crates/vcz_ui/src/: action.rs  app.rs  app_style.rs  lib.rs  main.rs  tui.rs
crates/vcz_ui/src/components/: input.rs  mod.rs  torrent_list.rs
crates/vcz_ui/src/pages/: home.rs  mod.rs
crates/vincenzo/: Cargo.toml  README.md
crates/vincenzo/src/: avg.rs  daemon.rs  disk.rs  extension.rs  lib.rs  magnet.rs  metainfo.rs  torrent.rs
crates/vincenzo/src/daemon_wire/: mod.rs
crates/vincenzo/src/peer/: mod.rs
crates/vincenzo/src/tcp_wire/: messages.rs
crates/vincenzo/src/tracker/: announce.rs  connect.rs  mod.rs
crates/vincenzo/tests/: integration.rs  lib.rs
