[package]
name = "vcz"
version = "0.0.3"
edition = "2021"

[[bin]]
name = "vcz"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bendy = { version = "0.3.3", features = ["std"] }
bytes = "1.5.0"
clap = {version = "4.4.16", features = ["derive"]}
crossterm = { version = "0.27.0", features = ["event-stream"] }
directories = "5.0.1"
futures = "0.3.30"
hashbrown = "0.14.3"
hex = "0.4.3"
magnet-url = "2.0.0"
rand = "0.8.5"
ratatui = { version = "0.25.0", features = ["all-widgets"] }
serde = { version = "1.0.195", features = ["derive"] }
sha1_smol = { version = "1.0.0", features = ["serde"] }
speedy = "0.8.6"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt", "fs", "tracing", "time", "macros", "rt-multi-thread", "sync", "io-std", "io-util",  "net"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
urlencoding = "2.1.3"
vincenzo = { path = "../vincenzo" }
vcz_ui = { path = "../vcz_ui" }
tracing-appender = "0.2.3"
time = "0.3.31"
