[package]
name = "vcz_daemon"
version = "0.0.3"
edition = "2021"

[[bin]]
name = "vczd"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bendy = { version = "0.3.3", features = ["std"] }
bytes = "1.5.0"
clap = {version = "4.5.1", features = ["derive"]}
directories = "5.0.1"
futures = "0.3.30"
hashbrown = "0.14.3"
hex = "0.4.3"
magnet-url = "2.0.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
sha1_smol = { version = "1.0.0", features = ["serde"] }
speedy = "0.8.7"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["rt", "fs", "tracing", "time", "macros", "rt-multi-thread", "sync", "io-std", "io-util",  "net"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
toml = "0.8.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
vincenzo = { path = "../vincenzo" }
