[package]
name = "vcz_ui"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.1", features = ["derive"]}
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
hashbrown = "0.14.3"
magnet-url = "2.0.0"
rand = "0.8.5"
ratatui = { version = "0.26.1", features = ["serde", "macros"] }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["rt", "fs", "tracing", "time", "macros", "rt-multi-thread", "sync", "io-std", "io-util",  "net"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
signal-hook = "0.3.17"
pretty_assertions = "1.4.0"
vincenzo = { path = "../vincenzo" }
