[package]
name = "vincenzo"
version = "0.0.3"
description = "A BitTorrent protocol library that powers the Vincenzo client."
keywords = ["distributed", "bittorrent", "torrent", "p2p", "networking"]
categories = ["network-programming"]
repository = "https://github.com/gabrieldemian/vincenzo"
homepage = "https://vincenzo.rs"
authors = ["Gabriel Lombardo <gabrielgcr45@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
exclude = [
  "tests/*",
  "*.log",
  "tape.gif",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.16", features = ["derive"]}
futures = "0.3.30"
hashbrown = "0.14.3"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt", "fs", "tracing", "time", "macros", "rt-multi-thread", "sync", "io-std", "io-util",  "net"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
bendy = { version = "0.3.3", features = ["std"] }
bytes = "1.5.0"
hex = "0.4.3"
magnet-url = "2.0.0"
sha1_smol = { version = "1.0.0", features = ["serde"] }
speedy = "0.8.6"
tracing = "0.1.40"
urlencoding = "2.1.3"
directories = "5.0.1"
toml = "0.8.8"
bitvec = "1.0.1"

[dev-dependencies]
tracing-subscriber = "0.3.18"
